--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
 		<version>2.2.4.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+
 	<groupId>com.wtc</groupId>
 	<artifactId>springcloud</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
@@ -16,6 +17,12 @@
 
 	<properties>
 		<java.version>1.8</java.version>
+		<pmd.version>6.20.0</pmd.version>
+		<sonar.projectKey>OskarAlbersWTC_SonarCloud</sonar.projectKey>
+		<sonar.organization>oskaralberswtc</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+		<sonar.login>c52b3095f0a29b5a0ea21759e4c7d420fae5704c</sonar.login>
+		<sonar.java.pmd.reportPaths>target/pmd.xml</sonar.java.pmd.reportPaths>
 	</properties>
 
 	<dependencies>
@@ -53,7 +60,55 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-pmd-plugin</artifactId>
+				<version>3.12.0</version>
+				<configuration>
+					<rulesets>
+						<ruleset>/category/java/bestpractices.xml</ruleset>
+						<ruleset>src/main/resources/pmd/jpinpoint-rules.xml</ruleset>
+					</rulesets>
+					<sourceEncoding>utf-8</sourceEncoding>
+					<minimumTokens>50</minimumTokens>
+					<targetJdk>13</targetJdk>
+				</configuration>
+				<dependencies>
+					<dependency>
+						<groupId>net.sourceforge.pmd</groupId>
+						<artifactId>pmd-core</artifactId>
+						<version>${pmd.version}</version>
+					</dependency>
+					<dependency>
+						<groupId>net.sourceforge.pmd</groupId>
+						<artifactId>pmd-java</artifactId>
+						<version>${pmd.version}</version>
+					</dependency>
+					<dependency>
+						<groupId>net.sourceforge.pmd</groupId>
+						<artifactId>pmd-javascript</artifactId>
+						<version>${pmd.version}</version>
+					</dependency>
+					<dependency>
+						<groupId>net.sourceforge.pmd</groupId>
+						<artifactId>pmd-jsp</artifactId>
+						<version>${pmd.version}</version>
+					</dependency>
+				</dependencies>
+			</plugin>
 		</plugins>
 	</build>
+	<repositories>
+		<repository>
+			<id>ordering</id>
+			<name>Ordering Package Registry</name>
+			<url>https://maven.pkg.github.com/jumbo-supermarkten/ordering</url>
+		</repository>
+		<repository>
+			<id>dynamodb-local-frankfurt</id>
+			<name>DynamoDB Local Release Repository</name>
+			<url>https://s3.eu-central-1.amazonaws.com/dynamodb-local-frankfurt/release</url>
+		</repository>
+	</repositories>
 
 </project>
