--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,14 @@
 language: java
+sudo: false
+install: true
+
+addons:
+  sonarcloud:
+    organization: OskarAlbersWTC
+    token:
+      secure: b30308462d57f1480d11398152cb72fa2edc9bd2
+jdk:
+  - oraclejdk8
+
+script:
+  - mvn clean verify sonar:sonar
