--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,9 @@ install: true
 
 addons:
   sonarcloud:
-    organization: OskarAlbersWTC
+    organization: oskaralberswtc
     token:
       secure: b30308462d57f1480d11398152cb72fa2edc9bd2
-
 
 script:
   - mvn clean verify sonar:sonar
